Fix in Mobile a Spacing Issue above Footer

--- a/stylesheets/_structure.scaffolding.scss
+++ b/stylesheets/_structure.scaffolding.scss
@@ -26,13 +26,17 @@ body {
   display: table;
   height: 100%;
   // Allow any content to clear the fixed footer
-  margin: 0 0 40px;
+  margin: 0;
   overflow: hidden;
   position: relative;
   width: 100%;
 
   @include ie-lte(8) {
     overflow: visible;
+  }
+
+  @include respond-min($screen-smaller) {
+    margin: 0 0 40px;
   }
 }
 
